force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/SOLXYZCSO001__ReportOutputRule__c.object-meta.xml
<CustomObject>
    <label>ReportOutputRule</label>
    <nameField>
        <label>帳票出力ルール名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>