force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__CronTriggerID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__CronTriggerID__c</fullName>
    <label>スケジュール済みジョブID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>