force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliveryMailFromDisplayAddress__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryMailFromDisplayAddress__c</fullName>
    <label>配信：送信元アドレス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>