force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliveryMailFromDisplayName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryMailFromDisplayName__c</fullName>
    <label>配信：送信元名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>