force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliveryMailPasswordMessage__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryMailPasswordMessage__c</fullName>
    <description>パスワード通知メールメッセージ</description>
    <label>配信：パスワード通知メールメッセージ</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>