force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliveryMailPasswordTo__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryMailPasswordTo__c</fullName>
    <label>配信：パスワード通知メール送信先(To)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>