force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliveryMailTemplate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryMailTemplate__c</fullName>
    <label>配信：通知テンプレート</label>
    <length>18</length>
    <type>Text</type>
</CustomField>