force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliveryMailUrlBcc__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryMailUrlBcc__c</fullName>
    <label>配信：ダウンロード通知メール送信先(Bcc)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>