force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliveryMailUrlSubject__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryMailUrlSubject__c</fullName>
    <label>配信：ダウンロード通知メール件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>