force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliveryPeriod__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryPeriod__c</fullName>
    <label>配信期間</label>
    <length>32</length>
    <type>Text</type>
</CustomField>