force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliveryScheduleId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryScheduleId__c</fullName>
    <label>配信：配信スケジュールID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>