force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliverySfNotifyOnVisit__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliverySfNotifyOnVisit__c</fullName>
    <label>配信：Salesforce 配信初回アクセス通知</label>
    <length>32</length>
    <type>Text</type>
</CustomField>