force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__DeliveryStartDate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryStartDate__c</fullName>
    <label>配信：配信開始日時</label>
    <length>32</length>
    <type>Text</type>
</CustomField>