force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__ExcelOutputType__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExcelOutputType__c</fullName>
    <label>Excel出力方式</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SingleSheet</fullName>
            </value>
            <value>
                <fullName>MultiSheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>