force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__FFSecurityToken__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__FFSecurityToken__c</fullName>
    <label>FFSecurityToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>