force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__IsARPrint__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsARPrint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsARPrint</label>
    <type>Checkbox</type>
</CustomField>