force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__IsDeliverySet__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsDeliverySet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>配信セットフラグ</label>
    <type>Checkbox</type>
</CustomField>