force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__IsFileFormatChangeable__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsFileFormatChangeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ファイル形式：出力時変更可能</label>
    <type>Checkbox</type>
</CustomField>