force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__IsFileFormatSet__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsFileFormatSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ファイル形式セットフラグ</label>
    <type>Checkbox</type>
</CustomField>