force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__IsFileNameSet__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsFileNameSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ファイル名セットフラグ</label>
    <type>Checkbox</type>
</CustomField>