force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__IsMailPost__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsMailPost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>メール通知フラグ</label>
    <type>Checkbox</type>
</CustomField>