force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__IsSaveLocationSet__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsSaveLocationSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>保存先セットフラグ</label>
    <type>Checkbox</type>
</CustomField>