force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__LastModifiedDateByUser__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__LastModifiedDateByUser__c</fullName>
    <label>最終ユーザ更新日時</label>
    <type>DateTime</type>
</CustomField>