force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__ObjectID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ObjectID__c</fullName>
    <label>オブジェクト</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>