force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__OutputUserRefreshToken__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OutputUserRefreshToken__c</fullName>
    <label>OutputUserRefreshToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>