force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__OutputWay__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__OutputWay__c</fullName>
    <label>出力形式</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>手動</fullName>
                <default>true</default>
                <label>手動</label>
            </value>
            <value>
                <fullName>自動</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>