force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__PrintInfo__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__PrintInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>印刷情報</label>
    <type>Checkbox</type>
</CustomField>