force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__Priority__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Unique number per report definiton</description>
    <label>優先順位</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>