force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__RecordSearchCondition__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__RecordSearchCondition__c</fullName>
    <label>レコード検索条件</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>