force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__ReportDefinition__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportDefinition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>帳票定義</label>
    <referenceTo>SOLXYZCSO001__ReportDefinition__c</referenceTo>
    <relationshipLabel>帳票出力ルール</relationshipLabel>
    <relationshipName>ReportOutputRules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>