force-app/main/default/objects/SOLXYZCSO001__ReportOutputRule__c/fields/SOLXYZCSO001__SaveLocation__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__SaveLocation__c</fullName>
    <label>保存先</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>DocumentFolder</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>